--- a/clean_figure2.ipynb
+++ b/clean_figure2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "5868ff98",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,8 @@
     "sens=HessianCircadian()\n",
     "params = sens.get_parameters_array()\n",
     "\n",
+    "figure_save == 'off'\n",
+    "    \n",
     "# define the light schedules \n",
     "ndays = 7\n",
     "intensity = 979\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "994b2503",
    "metadata": {},
    "outputs": [],
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "6f35b865",
    "metadata": {},
    "outputs": [
@@ -134,13 +136,14 @@
     "plt.ylabel('frobenius norm of hessian')\n",
     "plt.xticks(np.arange(6), ('Reg', 'SW', 'SW312', 'SJL', 'SS','Dark'))\n",
     "plt.title('Frobenius norm of the hessian')\n",
-    "#plt.savefig('figures_8_29/bar_plot_hessian_week.svg')\n",
+    "if figure_save == 'on':\n",
+    "    plt.savefig('figures_8_29/bar_plot_hessian_week.svg')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a50ca0c3",
+   "id": "f2fa5901",
    "metadata": {},
    "source": [
     "We see that the constant darkness schedule generates the largest Frobenius norm of the hessian, by a significant margin. This is followed by the shift work three twelve's schedule, the shift work schedule, the slam shift schedule, the social jet lag schedule, and finally the regular light schedule. "
@@ -159,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "0a616765",
    "metadata": {},
    "outputs": [
@@ -331,7 +334,8 @@
     "    plt.ylabel('eigenvalue')\n",
     "    plt.xlabel('eigenvalue index')\n",
     "    plt.title(schedule_name)\n",
-    "    #plt.savefig('figures_8_29/evals_rl.svg')\n",
+    "    if figure_save == 'on':\n",
+    "        plt.savefig('figures_8_29/evals_rl.svg')\n",
     "    plt.show()\n",
     "    \n",
     "    plt.bar(range(len(evecs)),abs(evecs_prin))\n",
@@ -339,7 +343,8 @@
     "    plt.ylabel('eigenvector magnitude')\n",
     "    plt.xlabel('eigenvector entry')\n",
     "    plt.title(schedule_name)\n",
-    "    #plt.savefig('figures_8_29/unscaled_evec_rl.svg')\n",
+    "    if figure_save == 'on':\n",
+    "        plt.savefig('figures_8_29/unscaled_evec_rl.svg')\n",
     "    plt.show()\n",
     "    return evals, evecs_prin\n",
     "\n",
