--- a/clean_figure4.ipynb
+++ b/clean_figure4.ipynb
@@ -34,6 +34,8 @@
     "sens=HessianCircadian()\n",
     "params = sens.get_parameters_array()\n",
     "\n",
+    "figure_save == 'off'\n",
+    "\n",
     "# function for generating initial conditions \n",
     "def ics_individual_schedules(final_state_diff, convergence_val, ics, lights, params):\n",
     "    u0 = ics\n",
@@ -225,7 +227,8 @@
     "plt.title('Mishra et al., subject %i' % ind1)\n",
     "plt.ylabel('magnitude')\n",
     "plt.xlabel('component')\n",
-    "#plt.savefig('figures_8_29/real_data_ex0.svg')\n",
+    "if figure_save == 'on':\n",
+    "    plt.savefig('figures_8_29/real_data_ex0.svg')\n",
     "plt.show()\n",
     "\n",
     "evals, evecs = np.linalg.eig(hessianVal_rl[ind2])\n",
@@ -234,7 +237,8 @@
     "plt.title('Mishra et al., subject %i' % ind2)\n",
     "plt.ylabel('magnitude')\n",
     "plt.xlabel('component')\n",
-    "#plt.savefig('figures_8_29/real_data_ex1.svg')\n",
+    "if figure_save == 'on':\n",
+    "    plt.savefig('figures_8_29/real_data_ex1.svg')\n",
     "plt.show()\n",
     "\n",
     "evals, evecs = np.linalg.eig(hessianVal_rl[ind3])\n",
@@ -243,7 +247,8 @@
     "plt.title('Mishra et al., subject %i' % ind3)\n",
     "plt.ylabel('magnitude')\n",
     "plt.xlabel('component')\n",
-    "#plt.savefig('figures_8_29/real_data_ex2.svg')\n",
+    "if figure_save == 'on':\n",
+    "    plt.savefig('figures_8_29/real_data_ex2.svg')\n",
     "plt.show()\n"
    ]
   },
@@ -333,7 +338,8 @@
     "ax = sns.heatmap(dot_mat_subject_all_norm, annot = True)\n",
     "ax.set_xticklabels(['RL','SW','SW312','SJL','SS','Dark'])\n",
     "ax.set_yticklabels(['Ex. 1', 'Ex. 2', 'Ex. 3'])\n",
-    "#plt.savefig('figures_8_29/real_data_heatmap_normalized.svg')"
+    "if figure_save == 'on':\n",
+    "    plt.savefig('figures_8_29/real_data_heatmap_normalized.svg')"
    ]
   },
   {
