Update with new MCMC run, new figure plotting variable

--- a/clean_sensitivity_all.ipynb
+++ b/clean_sensitivity_all.ipynb
@@ -38,7 +38,6 @@
     "params = sens.get_parameters_array()\n",
     "\n",
     "# define the light schedules \n",
-    "\n",
     "ndays = 7\n",
     "intensity = 979\n",
     "dt = 0.1\n",
@@ -60,7 +59,6 @@
     "plt.xlabel('parameter index')\n",
     "plt.ylabel('log(abs(parameters))')\n",
     "plt.title('Log of Parameter Magnitude, Default')\n",
-    "plt.savefig('figures_8_29/fig1_params_default.svg')\n",
     "plt.show()\n",
     "\n",
     "# generate example perturbed parameters\n",
@@ -178,9 +176,9 @@
     "import pandas as pd\n",
     "\n",
     "# read in the data \n",
-    "mcmc_runs = pd.read_csv('mcmc_new_run_2022.csv', header = None, delimiter = '\\t').to_numpy()\n",
-    "# list: tau, K, A1, A2, BetaL1, BetaL2, sigma, p, I0, alpha0, Beta1, ent_angle, cost, dd_period\n",
-    "mcmc_param_list = [\"tau\", \"K\", \"A1\", \"A2\", \"BetaL1\", \"BetaL2\", \"sigma\", \"p\", \"I0\", \"alpha0\", \"Beta1\", \"ent_angle\", \"cost\", \"dd_period\"]\n",
+    "mcmc_runs = pd.read_csv('mcmc_new_run.tsv', header = None, delimiter = '\\t').to_numpy()\n",
+    "# list: tau, K, gamma, A1, A2, BetaL1, BetaL2, sigma, p, I0, alpha0, Beta1, ent_angle, cost, dd_period\n",
+    "mcmc_param_list = [\"tau\", \"K\", \"gamma\",\"A1\", \"A2\", \"BetaL1\", \"BetaL2\", \"sigma\", \"p\", \"I0\", \"alpha0\", \"Beta1\", \"ent_angle\", \"cost\", \"dd_period\"]\n",
     "model_param_list = [\"tau\", \"K\", \"gamma\", \"Beta1\", \"A1\", \"A2\", \"BetaL1\", \"BetaL2\", \"sigma\", \"G\", \"alpha_0\", \"delta\", \"p\", \"I0\"]\n",
     "\n",
     "# initialize the figure \n",
