--- a/real_data_examples.ipynb
+++ b/real_data_examples.ipynb
@@ -5,7 +5,7 @@
    "id": "780d3af4",
    "metadata": {},
    "source": [
-    "## Generate Figure 4, for the sensitivity analysis manuscript \n",
+    "## Generate real data examples (previously figure 4), for the sensitivity analysis manuscript \n",
     "We apply the hessian-based sensitivity analysis method to examples of real wearable data. Using rescaled activity in place of light, we generate hessian matrices for real individuals and examine their overall sensitivity and individual parameter sensitivity. \n",
     "\n",
     "This figure conists of two main components. First, we compute the principal eigenvector of the hessian matrices and plot these for the three subjects of interest. Next, we compute a heatmap figure where we compare the prinicipal eigenvector of the real data examples with those from the six synthetic light schedules. "
