--- a/clean_sensitivity_all.ipynb
+++ b/clean_sensitivity_all.ipynb
@@ -309,7 +309,7 @@
    "id": "27fe5bb8",
    "metadata": {},
    "source": [
-    "We generate figure 4, applying the hessian-based sensitivity analysis to real data examples. "
+    "We generate the real data examples (old figure 4), applying the hessian-based sensitivity analysis to real data examples. "
    ]
   },
   {
